--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
     "next": "^13.1.1",
     "react": "^18.2.0",
