--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "sass": "^1.80.6"
   },
