--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0",
     "sass": "^1.80.6"
   },
   "devDependencies": {
